# rs-shortener

./: .env  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 0001_create_urls.sql
src/: main.rs
src/config/: mod.rs
src/handlers/: mod.rs
src/store/: mod.rs  pg.rs
