[package]
name = "rs-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-valid = "0.24.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
